# clerk

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  SKILL.md  STYLE_GUIDE.md  clean_kit.py  docker-compose.yml  main.py  mcp_servers.json  package.json  pyproject.toml  tailwind.config.js  test_llm_tools.py  test_mcp.py  test_tools_api.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: AGENTS.md.instructions.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/frontend/: README.md  package-lock.json  package.json
apps/website/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docker/: nginx.conf
docs/: README.md  integration.md  mcp.md  reasoning_kits.md
docs/cli/: db.md  list.md  run.md  web.md
docs/contributing/: architecture.md
docs/integration/: README.md  api-reference.md  examples.md
docs/ui/: editing_kits.md  overview.md
docs_for_dev/: ARCHITECTURE.md  AUTO_EVAL.md  BRANCH_PROTECTION.md  PYPI_RELEASE.md  TOOLS_MCP_CLI.md  WEBSITE_LAUNCH.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: setup.sh  sync-docs.sh
src/clerk/: cli.py  (+8 more)
(+160 files in other folders)
