[project]
name = "clerk"
version = "0.1.0"
description = "Community Library of Executable Reasoning Kits"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LLM Framework
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    # Utilities
    "python-dotenv>=1.2.1",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "supabase>=2.11.0",
    # Text extraction
    "pypdf>=5.1.0",
    "openpyxl>=3.1.5",
    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2.0",
    "sse-starlette>=2.1.0",
]

[project.scripts]
clerk = "clerk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clerk"]

[tool.uv]
package = true

